[package]
name = "rusty-sapper"
version = "1.0.0"
authors = ["Aunmag <aunmag@gmail.com>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
async-std = "1.5"
bincode = "1.2.1"
futures = "0.3"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
termwiz = "0.6.0"
tokio = { version = "0.2", features = ["sync", "tcp"] }
